test, unless it works - 2

--- a/.github/actions/building/action.yml
+++ b/.github/actions/building/action.yml
@@ -11,6 +11,6 @@ runs:
 
           sudo mv lib/libprom /usr/local/lib/libprom.so
           sudo mv lib/libpromhttp /usr/local/lib/libpromhttp.so
-
+          sudo mv lib/* /usr/local/include/
 
           make all
