test, but if it works, it's not a test - 3

--- a/.github/actions/building/action.yml
+++ b/.github/actions/building/action.yml
@@ -11,6 +11,20 @@ runs:
 
           sudo mv lib/libprom /usr/local/lib/libprom.so
           sudo mv lib/libpromhttp /usr/local/lib/libpromhttp.so
-          sudo mv lib/* /usr/local/include/
+          
+          sudo mv lib/prom /usr/local/include/prom.h
+          sudo mv lib/prom_alloc /usr/local/include/prom_alloc.h
+          sudo mv lib/prom_collector /usr/local/include/prom_collector.h
+          sudo mv lib/prom_collector_registry /usr/local/include/prom_collector_registry.h
+          sudo mv lib/prom_counter /usr/local/include/prom_counter.h
+          sudo mv lib/prom_gauge /usr/local/include/prom_gauge.h
+          sudo mv lib/prom_histogram /usr/local/include/prom_histogram.h
+          sudo mv lib/prom_histogram_buckets /usr/local/include/prom_histogram_buckets.h
+          sudo mv lib/prom_linked_list /usr/local/include/prom_linked_list.h
+          sudo mv lib/prom_map /usr/local/include/prom_map.h
+          sudo mv lib/prom_metric /usr/local/include/prom_metric.h
+          sudo mv lib/prom_metric_sample /usr/local/include/prom_metric_sample.h
+          sudo mv lib/prom_metric_sample_histogram /usr/local/include/prom_metric_sample_histogram.h
+          sudo mv lib/promhttp /usr/local/include/promhttp.h
 
           make all
