--- a/.github/actions/building/action.yml
+++ b/.github/actions/building/action.yml
@@ -11,6 +11,7 @@ runs:
 
           sudo mv lib/libprom /usr/local/lib/libprom.so
           sudo mv lib/libpromhttp /usr/local/lib/libpromhttp.so
+          sudo mv libmicrohttpd /usr/local/lib/libmicrohttpd.so
           
           sudo mv lib/prom /usr/local/include/prom.h
           sudo mv lib/prom_alloc /usr/local/include/prom_alloc.h
