multiple fixes for the fifo

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,7 +18,7 @@ link_directories(/usr/local/lib)
 find_package(cJSON REQUIRED)
 find_package(unity REQUIRED)
 
-add_executable(${PROJECT_NAME} src/main.c src/expose_metrics.c src/metrics.c)
+add_executable(${PROJECT_NAME} src/main.c src/expose_metrics.c src/metrics.c src/cjson_handler.c)
 
 target_link_libraries(${PROJECT_NAME} PRIVATE cjson::cjson)
 target_link_libraries(${PROJECT_NAME} PRIVATE unity::unity)
